<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:background="@drawable/splash_screen2">


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="4dp">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="17dp"
            android:text="Submit" />


        <TextView
            android:id="@+id/input3"
            android:layout_width="161dp"
            android:layout_height="37dp"
            android:text="Edit Profile"
            android:textColor="@color/rice"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="120dp"
            tools:layout_editor_absoluteY="16dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/Height"
            android:layout_marginTop="22dp" />

        <Button
            android:id="@+id/profile_change_password"
            android:layout_width="222dp"
            android:layout_height="60dp"
            android:text="Change Password"
            tools:layout_editor_absoluteX="81dp"
            tools:layout_editor_absoluteY="292dp"
            android:layout_above="@+id/button4"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="14dp" />

        <EditText
            android:id="@+id/input2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/input3"
            android:layout_marginEnd="13dp"
            android:layout_marginTop="46dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="value:"
            android:textColor="@android:color/darker_gray"
            tools:layout_editor_absoluteX="137dp"
            tools:layout_editor_absoluteY="115dp" />

        <EditText
            android:id="@+id/input1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/input2"
            android:layout_below="@+id/input2"
            android:layout_marginTop="29dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="value:"
            android:textColor="@android:color/darker_gray"
            tools:layout_editor_absoluteX="137dp"
            tools:layout_editor_absoluteY="64dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/GenderTxt"
            android:layout_alignEnd="@+id/profile_change_password"
            android:id="@+id/gender_change_group"
            >

            <RadioButton
                android:id="@+id/Mbtn"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/GenderTxt"
                android:layout_alignStart="@+id/input1"
                android:layout_marginStart="21dp"
                android:checked="true"
                android:text="Male"
                android:textColor="@color/rice"
                android:buttonTint="@color/rice"
                tools:layout_editor_absoluteX="137dp"
                tools:layout_editor_absoluteY="172dp" />

            <RadioButton
            android:id="@+id/Fbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
                android:textColor="@color/rice"
                android:buttonTint="@color/rice"
            tools:layout_editor_absoluteX="210dp"
            tools:layout_editor_absoluteY="172dp"
            android:layout_alignBaseline="@+id/Mbtn"
            android:layout_alignBottom="@+id/Mbtn"
            android:layout_toEndOf="@+id/input3" />

        </RadioGroup>

        <TextView
            android:id="@+id/GenderTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/gender"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="172dp"
            android:layout_below="@+id/WeightText"
            android:layout_alignStart="@+id/Height" />

        <TextView
            android:id="@+id/WeightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/input1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:text="Weight:"
            android:textColor="@color/rice"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="115dp" />

        <TextView
            android:id="@+id/Height"
            android:layout_width="99dp"
            android:layout_height="36dp"
            android:layout_alignBaseline="@+id/input2"
            android:layout_alignBottom="@+id/input2"
            android:layout_alignEnd="@+id/WeightText"
            android:text="Height:"
            android:textSize="30sp"
            android:textColor="@color/rice"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="64dp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>