...
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            app:srcCompat="@drawable/logo1" />

        <EditText
            android:id="@+id/username"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/password"
            android:layout_below="@+id/imageView4"
            android:background="@drawable/edit_text1"
            android:hint="UserName"
            android:inputType="text"
            android:textColor="@color/aqua"
            android:maxLines="1"
...
