<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.moranlee.justgo.activity.activity.MainMenu">

        />
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/background"
        app:itemTextColor="@color/rice"
        app:itemIconTint="@color/rice"
        app:menu="@menu/drawer_menu"

        android:fitsSystemWindows="true"/>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/splash_screen2"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">


            <Button
                android:id="@+id/go_add_diet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/food_icon_main"
                android:layout_marginStart="16dp"
                android:layout_alignTop="@+id/diet_management"
                android:layout_alignStart="@+id/main_weight" />

            <Button
                android:id="@+id/go_body_analysis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/go_exercies_recommendation"
                android:layout_below="@+id/go_add_exercise"
                android:layout_marginStart="75dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/profile_icon_main" />

            <Button
                android:id="@+id/main_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/weight_icon_main"
                android:elevation="0dp"
                android:layout_marginEnd="30dp"
                android:layout_below="@+id/go_add_diet"
                android:layout_toStartOf="@+id/diet_management" />

            <Button
                android:id="@+id/diet_management"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/go_body_analysis"
                android:layout_marginTop="24dp"
                android:background="@drawable/diet_icon_main" />

            <Button
                android:id="@+id/go_add_exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/main_weight"
                android:layout_alignBottom="@+id/main_weight"
                android:layout_alignEnd="@+id/diet_management"
                android:layout_marginEnd="15dp"
                android:background="@drawable/exercise_icon_main" />

            <!-- Analysis button in Main Menu -->
            <Button
                android:id="@+id/mainAnalysisBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/go_add_diet"
                android:layout_below="@+id/main_weight"
                android:background="@drawable/analysis_icon_main" />

            <Button
                android:id="@+id/go_exercies_recommendation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/go_body_analysis"
                android:layout_centerHorizontal="true"
                android:background="@drawable/recomm_icon_main" />


        </RelativeLayout>



</android.support.v4.widget.DrawerLayout>

