...
            tools:layout_editor_absoluteX="120dp"
            android:textSize="30sp"
            android:textColor="@color/rice"
            />
        <!-- Calorie Box -->
        <TextView
            android:id="@+id/analysisCalorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Calorie Box"
            android:textSize="20sp"
            android:textColor="@color/white"
            />
...
